--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python application
+name: Repomigration
 
 on:
   push:
@@ -10,7 +10,7 @@ on:
  #   branches: [ "main" ]
 
 permissions:
-  contents: read
+  contents: write
 
 jobs:
   build:
@@ -18,7 +18,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - name: checkout code
+      uses: actions/checkout@v3
+      with:
+        persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal access token.
+        fetch-depth: 0
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
@@ -37,3 +41,17 @@ jobs:
  #   - name: Test with pytest
  #     run: |
  #       pytest
+    - name: set repo for push
+      run: |
+          git config --global user.email "pdharmale@imf.org"
+          git config --global user.name "pravindharmale"
+    - name: Push repo
+      
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.PSA_TOKEN }}
+        repository: IMForg-Public/mirrorpdtest
+        branch: ${{ github.ref }}
+        force: true
+
+
