--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -10,8 +10,7 @@ on:
  #   branches: [ "main" ]
   workflow_dispatch:
 
-permissions:
-  contents: write
+
 
 jobs:
   build:
@@ -50,7 +49,7 @@ jobs:
       
       uses: ad-m/github-push-action@master
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ secrets.PSA_TOKEN }}
         repository: IMForg-Public/mirrorpdtest
         branch: ${{ github.ref }}
         force: true
