--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -41,6 +41,16 @@ jobs:
  #   - name: Test with pytest
  #     run: |
  #       pytest
+ 
+    - name: approval 
+      uses: trstringer/manual-approval@v1
+      with:
+        secret: ${{ secert.PSA_TOKEN }}
+        approvers: pravindharmale
+        issue-title: "Pushing  repo from  imfgit to IMForg-Public  Please approve"
+        issue-body: "Please approve or deny the repo movement"
+		    
+      
     - name: set repo for push
       run: |
           git config --global user.email "pdharmale@imf.org"
