--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -64,7 +64,7 @@ jobs:
       - name: Approval process to push repo
         uses: trstringer/manual-approval@v1
         with:
-         secret: ${{ secrets.PSA_TOKEN }}
+         secret: ${{ github.TOKEN}}
          approvers: pravindharmale
          issue-title: "Pushing  repo from  imfgit to IMForg-Public"
          issue-body: "Please approve or deny the repo movement"
